--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,5 @@
+*.jpg filter=lfs diff=lfs merge=lfs -text
+*.mov filter=lfs diff=lfs merge=lfs -text
 . !text !filter !merge !diff
 *.JPG filter=lfs diff=lfs merge=lfs -text
 *.JPG !text !filter !merge !diff
