--- a/tennis-web/package.json
+++ b/tennis-web/package.json
@@ -11,7 +11,9 @@
     "@testing-library/user-event": "^13.5.0",
     "google-map-react": "^2.2.0",
     "react": "^18.2.0",
+    "react-background-slider": "^2.0.0",
     "react-dom": "^18.2.0",
+    "react-grid-gallery": "^0.5.5",
     "react-icons": "^4.4.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-reveal": "^1.2.2",
